# ML-perceptron-learning-rule

./: .gitignore  README.md  importing_dataset.py
docs/: Doxyfile
docs/html/: _formulas.dvi  _formulas.tex  _formulas_dark.dvi  _formulas_dark.tex  _m_s_e_8hpp.html  _m_s_e_8hpp.js  _m_s_e_8hpp__dep__incl.map  _m_s_e_8hpp__dep__incl.md5  _m_s_e_8hpp__incl.map  _m_s_e_8hpp__incl.md5  _m_s_e_8hpp_source.html  annotated.html  annotated_dup.js  class_perceptron-members.html  class_perceptron.html  class_perceptron.js  classes.html  csv__reader_8hpp.html  csv__reader_8hpp.js  csv__reader_8hpp__dep__incl.map  csv__reader_8hpp__dep__incl.md5  csv__reader_8hpp__incl.map  csv__reader_8hpp__incl.md5  csv__reader_8hpp_source.html  dir_000001_000000.html  dir_000002_000000.html  dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_120ed4da3e3217b1e7fc0b4f48568e79_dep.map  dir_120ed4da3e3217b1e7fc0b4f48568e79_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_8408bad1c8b66572738be7dc5ba73ab6.html  dir_8408bad1c8b66572738be7dc5ba73ab6.js  dir_8408bad1c8b66572738be7dc5ba73ab6_dep.map  dir_8408bad1c8b66572738be7dc5ba73ab6_dep.md5  doxygen_crawl.html  files.html  files_dup.js  (+32 more)
docs/latex/: _m_s_e_8hpp.tex  _m_s_e_8hpp__dep__incl.md5  _m_s_e_8hpp__incl.md5  _m_s_e_8hpp_source.tex  annotated.tex  class_perceptron.tex  csv__reader_8hpp.tex  csv__reader_8hpp__dep__incl.md5  csv__reader_8hpp__incl.md5  files.tex  (+23 more)
src/: perceptron.cpp
test/: CMakeLists.txt
(+34 files in other folders)
